--- a/style/style.css
+++ b/style/style.css
@@ -151,7 +151,8 @@ nav ul li {
 .text-center {
     color: rgb(58, 37, 57);
     font-weight: bold;
-    font-style: italic;
+    /*font-style: italic;*/
+    text-transform: uppercase;
 }
 
 .content-bibliography {
