--- a/style/style.css
+++ b/style/style.css
@@ -292,12 +292,13 @@ nav ul li {
 }
 
 .slider li {
-    height: 100%;
+    width: 100%;
     list-style: none;
 }
 
 .slider img {
-    width: 100%;
+    /* width: 100%;*/
+    height: 20em;
 }
 
 nav ul {
