--- a/style/style.css
+++ b/style/style.css
@@ -288,7 +288,8 @@ nav ul li {
     padding: 1em;
     width: 480%;
     height: 80%;
-    animation: cambio 20s infinite alternate linear;
+    animation: cambio 20s alternate linear;
+    /* animation: cambio 20s infinite alternate linear;*/
 }
 
 .slider li {
